--- a/styles/hero.css
+++ b/styles/hero.css
@@ -182,15 +182,15 @@ section.hero {
     }
 
     25% {
-        transform: translateY(calc(-5rem + 10px));
+        transform: translateY(calc(-5rem + 5px));
     }
 
     27% {
-        transform: translateY(calc(-5rem - 5px));
+        transform: translateY(calc(-5rem - 2.5px));
     }
 
     29% {
-        transform: translateY(calc(-5rem + 5px));
+        transform: translateY(calc(-5rem + 2.5px));
     }
 
 
@@ -209,11 +209,11 @@ section.hero {
 
 
     60% {
-        transform: translateY(calc(-10rem - 5px));
+        transform: translateY(calc(-10rem - 2.5px));
     }
 
     62% {
-        transform: translateY(calc(-10rem + 5px));
+        transform: translateY(calc(-10rem + 2.5px));
     }
 
     66%,
@@ -232,11 +232,11 @@ section.hero {
 
 
     93% {
-        transform: translateY(calc(-15rem - 5px));
+        transform: translateY(calc(-15rem - 2.5px));
     }
 
     95% {
-        transform: translateY(calc(-15rem + 5px));
+        transform: translateY(calc(-15rem + 2.5px));
     }
 
 
@@ -253,5 +253,120 @@ section.hero {
         & .buttons{
             flex-direction: column;
         }
+
+        & h1{
+            font-size: 2rem;
+            height: 80px;
+            display: block;
+
+        }
+
+
+
+        & h1 div {
+           
+            height: 2.5rem;
+         
+        }
+
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    @keyframes slideup {
+
+        0%,
+        22% {
+            transform: translateY(0);
+        }
+    
+        23% {
+            transform: translateY(calc(-2.5rem - 7.5px));
+        }
+    
+        25% {
+            transform: translateY(calc(-2.5rem + 10px));
+        }
+    
+        27% {
+            transform: translateY(calc(-2.5rem - 5px));
+        }
+    
+        29% {
+            transform: translateY(calc(-2.5rem + 5px));
+        }
+    
+    
+        33%,
+        55% {
+            transform: translateY(-2.5rem);
+        }
+    
+        56% {
+            transform: translateY(calc(-5rem - 7.5px));
+        }
+    
+        58% {
+            transform: translateY(calc(-5rem + 5px));
+        }
+    
+    
+        60% {
+            transform: translateY(calc(-5rem - 5px));
+        }
+    
+        62% {
+            transform: translateY(calc(-5rem + 5px));
+        }
+    
+        66%,
+        88% {
+            transform: translateY(-5rem);
+        }
+    
+    
+        89% {
+            transform: translateY(calc(-7.5rem - 7.5px));
+        }
+    
+        91% {
+            transform: translateY(calc(-7.5rem + 5px));
+        }
+    
+    
+        93% {
+            transform: translateY(calc(-7.5rem - 5px));
+        }
+    
+        95% {
+            transform: translateY(calc(-7.5rem + 5px));
+        }
+    
+    
+        100% {
+            transform: translateY(-7.5rem);
+        }
+    }
+    
+
+
+
+
+
+
+
+
+
 }
