--- a/styles/footer.css
+++ b/styles/footer.css
@@ -99,3 +99,26 @@ footer{
         }
     }
 }
+
+
+
+
+@media(width<80rem){
+
+    footer{
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        padding: 1.5rem;
+        gap: 3rem;
+
+        & nav{
+            flex-direction: column;
+        }
+
+        & .social-links{
+            display: flex;
+      justify-content: left;
+    
+    }
+}}
