--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -127,3 +127,76 @@ section.gallery{
         transform: translateY(100%);
     }
 }
+
+
+
+@media (width<40rem){
+
+    section.gallery{
+
+        padding-inline: 0;
+        & header span{
+            font: 500 0.75rem/1.5 "Montserrat" ;
+        }
+
+        & header h2{
+            font-size: 1.5rem;
+        }
+
+
+        & .content{
+            all: unset;
+            margin-top: 1.5rem;
+    
+            display: flex;
+           flex-direction: column;
+           gap: 1.5rem;
+         
+    
+            
+        }
+
+
+        & figure{
+            animation: none;
+            width: 100%;
+
+
+            &>img{
+                max-height: 16rem;
+                min-width: 19.5rem;
+                object-fit: cover;
+                transition: scale 500ms;
+            }
+
+
+
+        }
+    }
+
+}
+
+
+@media (width < 80rem){
+
+    section.gallery{
+
+        & figure{
+            animation: none;
+            width: 100%;
+            min-height: 22rem;
+
+            &>img{
+                min-height: 22rem;
+                min-width: 19.5rem;
+                object-fit: cover;
+                transition: scale 500ms;
+            }
+
+
+
+        }
+
+    }
+
+}
